--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,16 @@
       <artifactId>gson</artifactId>
       <version>2.10</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.2.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.15.2</version>
+    </dependency>
   </dependencies>
 
 
