--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,12 @@
-data_base_url=jdbc:postgresql://localhost:5432/shop
-data_base_pass=1488
-data_base_name=postgres
+data_base_url=jdbc:postgresql://mydb.cfqc20lwhw16.eu-central-1.rds.amazonaws.com:5432/alco_shop
+data_base_pass=Overlord12
+data_base_name=awsdatabase
 
-jdbc:postgresql://dbaws.cfqc20lwhw16.eu-central-1.rds.amazonaws.com:5432/Shop
 
-awsdata
+
+
+
+
+jdbc:postgresql://localhost:5432/shop
+1488
+postgres
